More changes to configure the machine. added ansible-vault for linting

--- a/configure-my-mac.yml
+++ b/configure-my-mac.yml
@@ -4,7 +4,10 @@
   become: true
   gather_facts: False
   tasks:
-     #- name: Copy requirements.txt
+    - name: Install python
+      command: brew install python
+
+      #- name: Copy requirements.txt
     - name: Install pip packages
       command: pip install -r files/ansible_requirements.txt
       register: status
