--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -1,2 +1,3 @@
 # General purpose variables to be used across all groups/hosts
 pip_url: https://bootstrap.pypa.io/get-pip.py
+vagrant_download: https://releases.hashicorp.com/vagrant/1.9.2/vagrant_1.9.2.dmg
