Fixed conflicts that made the code dirty when the stash patch was applied

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -22,3 +22,9 @@
   command: pip install -r files/ansible_requirements.txt
   register: status
 
+# - name: Clone dotfiles repo
+- name: Clone dotfiles repo
+  git:
+    repo: git@github.com:Miyurz/dotfiles.git
+    dest: "{{ temp_dir }}"
+    refspec: 'refs/heads/master'
