--- a/roles/ubuntu/vars/main.yml
+++ b/roles/ubuntu/vars/main.yml
@@ -1,2 +1,13 @@
 ---
-vagrant_package: 1.9.2/vagrant_1.9.2.dmg
+
+jenkins_repo_url: deb https://pkg.jenkins.io/debian binary/
+
+jenkins_repo_key_url: https://pkg.jenkins.io/debian/jenkins.io.key
+
+jenkins_pkg_url: https://pkg.jenkins.io/debian/binary
+
+jenkins_init_file: /etc/default/jenkins
+
+jenkins_http_port_param: HTTP_PORT
+
+jenkins_java_options_env_var: JAVA_ARGS
