--- a/configure-box.yml
+++ b/configure-box.yml
@@ -2,9 +2,22 @@
 - hosts: localhost
   connection: local
   gather_facts: False
+
+  pre_tasks:
+     - shell: figlet 'Running PRE-TASKS ...'
+
   roles:
     - name: Apply common stuff first
-      role: common
+      { role: common, tags: ["all", "common", "first"] }
 
     - name: Applying role on Mac
-      role: mac
+      { role: mac, tags: ["OSX", "Mac"] }
+
+    - name: Applying role on Ubuntu
+      { role: ubuntu-16.04, tags: ["16.04", "Ubuntu"] }
+
+  tasks:
+    - shell: figlet 'Running TASKS ...'
+
+  post_tasks:
+    - shell: figlet 'Running POST-TASKS ...'
