--- a/configure-box.yml
+++ b/configure-box.yml
@@ -1,20 +1,15 @@
 ---
 - hosts: localhost
   connection: local
-  gather_facts: False
+  gather_facts: true
 
   pre_tasks:
-     - shell: figlet 'Running PRE-TASKS ...'
+    - shell: figlet 'Running PRE-TASKS ...'
 
   roles:
-    - name: Apply common stuff first
-      { role: common, tags: ["all", "common", "first"] }
-
-    - name: Applying role on Mac
-      { role: mac, tags: ["OSX", "Mac"] }
-
-    - name: Applying role on Ubuntu
-      { role: ubuntu-16.04, tags: ["16.04", "Ubuntu"] }
+    - {role: common, tags: ['all', 'common', 'first']}
+    - {role: mac, tags: ["OSX", "Mac"]}
+    - {role: ubuntu-16.04, tags: ["16.04", "Ubuntu"]}
 
   tasks:
     - shell: figlet 'Running TASKS ...'
