--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ansible-role-ssh-banner"]
-    path = roles/test
-    url =  git@github.com:Miyurz/ansible-role-ssh-banner.git
+[submodule "roles/ssh-banner"]
+	path = roles/ssh-banner
+	url = git@github.com:Miyurz/ansible-role-ssh-banner.git
