--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "roles/minikube"]
 	path = roles/minikube
 	url = git@github.com:Miyurz/ansible-role-minikube.git
+[submodule "roles/k8s"]
+	path = roles/k8s
+	url = git@github.com:Miyurz/ansible-role-k8s.git
