add a common role to provision the cluster

--- a/configure-box.yml
+++ b/configure-box.yml
@@ -14,9 +14,9 @@
         host: "{{ hostname.stdout }}"
 
   roles:
-    - {role: ssh-banner, tags: ['ssh-banner', 'banner', 'bootstrap', 'provision']}
-    - {role: ssh-banner, tags: ['ssh-banner', 'banner', 'bootstrap', 'provision']}
-    - {role: gcloud, tags: ['google-cloud-suite', 'gcloud']}
+    - {role: common, tags: ['common', 'base']}
+    #- {role: ssh-banner, tags: ['ssh-banner', 'banner', 'bootstrap', 'provision']}
+    #- {role: gcloud, tags: ['google-cloud-suite', 'gcloud']}
     #- {role: minikube, tags: ['minikube', 'kubernetes', 'kubectl', 'cluster']}
     # - {role: common, tags: ['common', 'all']}
 
