makefile target added

--- a/configure-box.yml
+++ b/configure-box.yml
@@ -17,6 +17,7 @@
     - {role: common, tags: ['common', 'base']}
     - {role: ssh-banner, tags: ['ssh-banner', 'banner', 'bootstrap', 'provision']}
     - {role: gcp, tags: ['google-cloud-suite', 'gcloud']}
+    - {role: terraform, tags: ['terraform', 'tf']}
     #- {role: minikube, tags: ['minikube', 'kubernetes', 'kubectl', 'cluster']}
     # - {role: common, tags: ['common', 'all']}
 
